[project]
name = "peterdresslar-asucss-f2025"
version = "0.1.0"
description = "Just a school project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "openai>=1.65.3",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "streamlit>=1.39.0",
    "requests>=2.32.5",
]
